[package]
name = "shutterctl"
version = "0.1.0"
authors = ["Martin Leuner <martin.leuner@rwth-aachen.de>"]
edition = "2018"

[dependencies]
flatbuffers = "2.0.0"   # bump to 2.0.0 once released flatc generates conformant code...
flatc-rust = "0.2.0"

[build-dependencies]
flatc-rust = "*"


[lib]
name = "shuttercomm"

[[bin]]
name = "shutterctld"
