[package]
name = "shutterctl"
version = "0.1.0"
authors = ["Martin Leuner <martin.leuner@rwth-aachen.de>"]
edition = "2021"

[dependencies]
flatbuffers = "22.10.26"
flatc-rust = "0.2.0"
directories = "4.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5.9"
anyhow = "1.0"

[build-dependencies]
flatc-rust = "*"


[lib]
name = "shutterproto"

[[bin]]
name = "shutterctld"

[[bin]]
name = "shutterclient"
